--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -3,6 +3,8 @@
   position: relative;
   font-size: calcFontSize(1);
   line-height: calcLineHeight(1.5);
+  border: 1px dashed $border;
+  padding: 0 calcSize(6);
 
   .sv-action-bar {
     padding: calcSize(1) 0;
@@ -20,6 +22,7 @@
     #fileIndex {
       .sv-action-bar-item {
         padding: calcSize(0.5) 0;
+        font-weight: 600;
 
         &:hover {
           background-color: $background;
@@ -33,23 +36,28 @@
   }
 }
 
+.sd-file--dragging {
+  border: 1px solid $primary;
+  box-shadow: inset 0 0 0 1px $primary;
+}
+
 .sd-file__decorator {
   display: flex;
   flex-direction: column;
   position: absolute;
-  width: 100%;
+  position: absolute;
+  left: calcSize(-6);
+  width: calc(100% + 12 * #{$base-unit});
   height: 100%;
   box-sizing: border-box;
-  border: 1px dashed $border;
   justify-content: center;
   align-items: center;
+  padding: 0 calcSize(8);
 }
 
 .sd-file__decorator--drag {
-  border: 1px solid $primary;
-  box-shadow: inset 0 0 0 1px $primary;
-  background: $primary-light;
   z-index: 1;
+  background: $primary-light;
 }
 
 .sd-file__no-file-chosen {
@@ -57,7 +65,6 @@
 }
 
 .sd-file__drag-area-placeholder {
-  padding: 0 calcSize(8);
   text-align: center;
   word-break: break-word;
   white-space: normal;
@@ -106,7 +113,7 @@
 
 .sd-file__clean-btn {
   z-index: 2;
-  inset-inline-end: calcSize(1);
+  inset-inline-end: calcSize(-5);
 
   span:first-child {
     display: none;
@@ -120,10 +127,11 @@
 .sd-file__list {
   overflow: auto;
   display: flex;
+  gap: calcSize(4);
   box-sizing: content-box;
   flex-direction: row;
   align-items: stretch;
-  justify-content: space-between;
+  justify-content: center;
   padding: calcSize(10.5) 0;
   min-height: calcSize(15);
   max-height: calcSize(15);
@@ -137,7 +145,7 @@
   align-items: center;
   flex-direction: column;
   min-height: 100%;
-  margin: 0 auto;
+  margin: 0;
 
   .sd-file__default-image {
     width: calcSize(7);
@@ -268,6 +276,6 @@
 
 .sd-file__drag-area {
   position: absolute;
-  width: 100%;
+  width: calc(100% - 12 * #{$base-unit});
   height: 100%;
 }
