--- a/src/knockout/templates/question-file.html
+++ b/src/knockout/templates/question-file.html
@@ -53,8 +53,8 @@
         <!-- /ko -->
         <!-- /ko -->
         <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButtonBottom} } --><!-- /ko -->
-        <!-- ko if: question.mobileFileNavigatorVisible -->
-        <!-- ko component: { name: 'sv-action-bar', params: { model: question.mobileFileNavigator } } -->
+        <!-- ko if: question.fileNavigatorVisible -->
+        <!-- ko component: { name: 'sv-action-bar', params: { model: question.fileNavigator } } -->
         <!-- /ko -->
         <!-- /ko -->
       </div>
