--- a/src/defaultV2-theme/defaultV2.m600.scss
+++ b/src/defaultV2-theme/defaultV2.m600.scss
@@ -28,32 +28,53 @@
       min-width: 100%;
     }
 
-    //multipletext responsiveness
-    .sd-multipletext__cell {
-      display: block;
+    @include table_responsive();
+    @include ranking_responsive();
+  }
+}
 
-      &:not(:first-of-type) {
-        padding-left: 0;
-        padding-top: calcSize(1);
-      }
+.sd-multipletext--mobile {
+  .sd-multipletext__cell {
+    display: block;
 
-      :not(:last-of-type) {
-        padding-bottom: calcSize(1);
-      }
+    &:not(:first-of-type) {
+      padding-left: 0;
+      padding-top: calcSize(1);
     }
 
-    .sd-multipletext__item-container {
-      flex-direction: column;
+    :not(:last-of-type) {
+      padding-bottom: calcSize(1);
     }
+  }
+
+  .sd-multipletext__item-container {
+    padding-top: calcSize(1);
+    padding-bottom: calcSize(1);
+  }
+
+  .sd-multipletext__item-title {
+    max-width: none;
+    border-right: none;
+    width: 100%;
+    padding: calcSize(1) 0;
+    margin: 0;
+  }
+
+  .sd-multipletext__item {
+    flex-basis: 0;
+
+    .sd-input {
+      padding: 0;
+      margin: 0;
+    }
+  }
+
+  .sd-multipletext__item-container--answered,
+  .sd-multipletext__item-container--allow-focus:focus-within {
+    flex-direction: column;
 
     .sd-multipletext__item-title {
-      height: calcSize(2);
-      padding-right: 0;
-      border-right: none;
-      margin-bottom: 0;
-      margin-top: calcSize(1);
-      width: 100%;
-      max-width: none;
+      padding: 0;
 
       span {
         font-size: calcFontSize(0.75);
@@ -62,26 +83,16 @@
     }
 
     .sd-multipletext__item {
+      flex-basis: auto;
       width: 100%;
     }
+  }
+}
 
-    .sd-multipletext__item .sd-input {
-      padding-right: 0;
-      padding-left: 0;
-      margin-top: 0;
-      margin-bottom: calcSize(1);
-    }
+.sd-selectbase--mobile .sd-selectbase--multi-column {
+  flex-direction: column;
 
-    //eo multipletext responsiveness
-    .sd-selectbase--multi-column {
-      flex-direction: column;
-
-      .sd-selectbase__column:not(:last-child) {
-        padding-right: 0;
-      }
-    }
-
-    @include table_responsive();
-    @include ranking_responsive();
+  .sd-selectbase__column:not(:last-child) {
+    padding-right: 0;
   }
 }
