--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -1,9 +1,9 @@
 .sd-file {
-  min-height: calcSize(36);
   position: relative;
   font-size: calcFontSize(1);
   line-height: calcLineHeight(1.5);
-  border: 1px dashed $border;
+  min-height: calcSize(36);
+  box-sizing: border-box;
   padding: 0 calcSize(6);
 
   .sv-action-bar {
@@ -11,6 +11,7 @@
     justify-content: center;
     position: absolute;
     width: 100%;
+    left: 0;
     bottom: 0;
 
     .sv-action-bar-item {
@@ -36,28 +37,26 @@
   }
 }
 
-.sd-file--dragging {
-  border: 1px solid $primary;
-  box-shadow: inset 0 0 0 1px $primary;
-}
-
 .sd-file__decorator {
   display: flex;
   flex-direction: column;
   position: absolute;
   position: absolute;
-  left: calcSize(-6);
-  width: calc(100% + 12 * #{$base-unit});
+  left: calcSize(0);
+  width: 100%;
   height: 100%;
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
   padding: 0 calcSize(8);
+  border: 1px dashed $border;
 }
 
 .sd-file__decorator--drag {
   z-index: 1;
+  border: 1px solid $primary;
   background: $primary-light;
+  box-shadow: inset 0 0 0 1px $primary;
 }
 
 .sd-file__no-file-chosen {
@@ -74,7 +73,7 @@
 }
 
 .sd-root-modern--mobile {
-  .sd-file__drag-area-placeholder {
+  .sd-file__decorator {
     padding: 0 calcSize(4);
   }
 }
@@ -119,7 +118,7 @@
 
 .sd-file__clean-btn {
   z-index: 2;
-  inset-inline-end: calcSize(-5);
+  inset-inline-end: calcSize(1);
 
   span:first-child {
     display: none;
@@ -131,7 +130,6 @@
 }
 
 .sd-file__list {
-  overflow: auto;
   display: flex;
   gap: calcSize(4);
   box-sizing: content-box;
@@ -141,7 +139,6 @@
   padding: calcSize(10.5) 0;
   min-height: calcSize(15);
   max-height: calcSize(15);
-  position: absolute;
   width: 100%;
 }
 
@@ -236,6 +233,8 @@
   }
 
   .sd-file__list {
+    position: absolute;
+    left: 0;
     padding: 0;
     height: 100%;
     max-height: 100%;
@@ -281,7 +280,7 @@
 }
 
 .sd-file__drag-area {
-  position: absolute;
-  width: calc(100% - 12 * #{$base-unit});
+  position: static;
+  width: 100%;
   height: 100%;
 }
